--- a/djnotes/templates/notes/index.html
+++ b/djnotes/templates/notes/index.html
@@ -1,3 +1,46 @@
+{% extends 'base.html' %}
+{% block title %} Notes {% endblock title %}
+
+{% block content %}
+{% load static %}
+{# Create new note form #}
+<div class="row">
+<div class="col-md-6 col-md-offset-3">
+<div class="panel panel-default">
+<div class="panel-body">
+<form class="inline-form" action=" {% url 'index' %} " method="post">
+{% csrf_token %}
+<input type="text" class="form-control clear-focus-highlight"
+id="txtNewNote"
+name="title" placeholder="Take a note...">
+<input class="btn btn-raised btn-primary btn-sm" type="submit"
+value="create">
+</form>
+</div>
+</div>
+</div>
+</div>
+
+{# Display notes #}
+<div class="row">
+{% for note in notes %}
+<a href="{% url 'update' note.ide %}">
+<div class="col-md-3">
+<div class="panel panel-default">
+<div class="panel-heading">
+<strong>{{ note.title }}</strong>
+</div>
+<div class="panel-body">
+{{ note.note }}
+</div>
+</div>
+</div>
+</a>
+{% endfor %}
+</div>
+</div>
+
+
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
@@ -6,18 +49,58 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>My super awesome, amazing note app</title>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+rel="stylesheet">
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"
+rel="stylesheet">
+<link href="{% static 'css/styles.css' %}" rel="stylesheet">
 
 </head>
-</body>
-    <h1>Hello world!</h1>
-    <u1>
-        {% for note in notes %}
-        <li>
-            <div>
-                Title: {{ note.title }} <br>
-                Note: {{ note.note }}
+
+
+
+<body>
+<div class="container">
+
+{# Header section #}
+<div class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+data-target=".navbar-responsive-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                
+                <a class="navbar-brand" href="javascript:void(0)">
+                    <strong>Notes</strong>
+                </a>
+                </button>
             </div>
-        </li>
+            <div class="navbar-collapse collapse navbar-responsive-collapse">
+            </div>
+        </div>
+  </div>
+
+{# Content section #}
+<div class="row">
+        {% for note in notes %}
+        <div class="col-md-3">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <strong>{{ note.title }}</strong>
+                </div>
+                <div class="panel-body">
+                    {{ note.note }}
+                </div>
+            </div>
+        </div>
         {% endfor %}
-    </ul>
+    </div>
+</div>
+{% endblock content %}
+{# JS section #}
+<script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+</body>
 </body>
