--- a/djnotes/templates/notes/index.html
+++ b/djnotes/templates/notes/index.html
@@ -24,7 +24,7 @@ value="create">
 {# Display notes #}
 <div class="row">
 {% for note in notes %}
-<a href="{% url 'update' note.ide %}">
+<a href="{% url 'update' note.id %}">
 <div class="col-md-3">
 <div class="panel panel-default">
 <div class="panel-heading">
