--- a/djnotes/templates/notes/update.html
+++ b/djnotes/templates/notes/update.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
-{% block title %}Notes {% if note.title %} | {{ note.title }} {% endif %} {% endblock title
-%}
+{% block title %}Notes {% if note.title %} | {{ note.title }} {% endif %} 
+{% endblock title %}
 
 {% block content %}
 <div class="row">
